--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <title>Portfolio website</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+    
+<body>
 
 <nav>
     <a href="index.html">Home</a> |
@@ -53,3 +55,5 @@
     <button type="submit">Versturen</button>
 
     </form>
+        
+        </body>
