--- a/contact-bedankt.html
+++ b/contact-bedankt.html
@@ -7,6 +7,8 @@
     <title>Portfolio website</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+    
+<body>
 
 <nav>
     <a href="index.html">Home</a> |
@@ -14,3 +16,5 @@
   </nav>
 
 <h1>Bedankt!</h1>
+
+    </body>
